add spring-security e resolve java jdk version